1.17 100% pre 1.18 save